add entity models for discussion
